Initial Github commit

--- a/recipes.html
+++ b/recipes.html
@@ -47,7 +47,7 @@
 				)
 			}
 			$.getJSON(
-				"x",
+				"json",
 				function(jsonFromJquery) {
 					const myRoot = ReactDOM.createRoot(document.getElementById('myApp'));
 					myRoot.render(
